# hass-egauge

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TODO.txt  hacs.json  info.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg
.devcontainer/: configuration.yaml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: constraints.txt  tests.yaml  validate.yaml
config/: configuration.yaml
custom_components/egauge/: __init__.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py
custom_components/egauge/translations/: en.json
scripts/: develop  lint  setup
tests/: __init__.py  conftest.py  const.py  test_config_flow.py  test_init.py  test_sensor.py
